# xion

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .go.work  .golangci.yml  .goreleaser-cross.yaml  .goreleaser.yaml  CLAUDE.md  Dockerfile  INSTALLERS.md  Makefile  README.md  README_Prometheus.md  SECURITY.md  SECURITY_ANALYSIS_52485.md  SECURITY_AUDIT_Prometheus-beta.md  _app.go  buf.work.yaml  chains.yaml  docker-compose.yml  dump.rdb  get_threads.gql  go.mod  go.sum  go.work  go.work.sum  keeper_coverage.html  keeper_coverage_final.html  keeper_coverage_new.html  keeper_coverage_updated.html  readme.md  skaffold.yaml  start-fork.sh  start-node.sh
.github/: CODEOWNERS  copilot-instructions.md  integration-tests.yml
.github/workflows/: Release_Flow.md  aws-ecr.yml  binaries-darwin.yaml  binaries-linux.yaml  binaries-test.yaml  build-barretenberg.yml  build-release-info.yaml  build-release.yaml  build-test-pr.yaml  build-test.yaml  build-test.yml  claude-code-review.yml  claude.yml  create-release.yaml  darwin-build.yaml  docker-build.yaml  docker-build.yml  docker-hub.yml  docker-push.yaml  docker-push.yml  docker-scout-run.yml  docker-scout.yaml  docker-scout.yml  docker.yml  e2e-tests.yaml  exec-goreleaser.yaml  extract-binaries-linux.yaml  golangci-lint.yaml  golangci-lint.yml  goreleaser.yaml  heighliner-alt.yaml  heighliner-alt.yml  heighliner-push.yaml  heighliner-run.yml  heighliner.yaml  heighliner.yml  integration-tests-run.yml  integration-tests.yaml  integration-tests.yml  linux-build.yaml  (+25 more)
.goreleaser/: build.yaml  docker.yaml  integration.yaml  release.yaml
.husky/hooks/: pre-commit
.kno/: chunk_review.txt
app/: ante.go  ante_test.go  app.go  app_test.go  authz_ante.go  authz_ante_test.go  authz_integration_test.go  config.go  config_test.go  encoding.go  export.go  genesis.go  sigverify.go  sim_test.go  simulation_test.go  test_helpers.go  testnet.go  upgrades.go  vulnerability_test.go  xionapp.go
app/decorators/: msg_filter_test.go
app/genesis/: README.md  wasm_importer.go  wasm_importer_test.go
app/indexer/: README.md  multi_raw.go  multi_raw_test.go
app/keepers/: wasm_keeper.go  wasm_keeper_test.go
app/params/: proto_test.go
app/upgrades/: types.go
app/v24_upgrade/: CORRUPTED_CONTRACTS.md  E2E_TESTS.md  README.md  SOLUTION_ALIGNMENT.md  WIRE_TYPE_ANALYSIS.md  constants.go  coverage_boost_test.go  detector.go  detector_test.go  e2e_upgrade_test.go  handler.go  handler_test.go  integration_test.go  migrator.go  migrator_test.go  proto_parser.go  proto_parser_edge_test.go  proto_parser_test.go  report.go  report_test.go  types.go  validator.go  validator_test.go
app/v25_upgrade/: CLI_TOOLS.md  README.md  analyzer.go  analyzer_test.go  cmd_analyze_contracts.go  cmd_v25_dry_run.go  detector.go  detector_test.go  fixer.go  fixer_test.go  migrator.go  migrator_test.go  proto_utils.go  proto_utils_test.go  types.go
benchmarks/: app_test.go  bench_test.go
chains/: ibc-testnet.json  testnet.json
client/docs/: config.json  config.yaml  docs.go  package-lock.json  package.json
client/js/: package-lock.json  package.json
client/ts/: .gitignore  package-lock.json  package.json
cmd/xiond/: commands.go  fix_genesis_chainid.go  fork_state.go  main.go  main_test.go  migrate_v24.go  root.go  root_test.go  test_utils.go  testnet.go
contrib/devtools/: Dockerfile  Makefile  README.md  extramoduleimports.patch  original.Dockerfile
contrib/local/: 02-contracts.sh  setup_wasmd.sh  start_node.sh
devnet/: README.md  docker-compose.yml  docker-run.sh  entrypoint.sh  purge.sh  wasm-genesis.json
devnet/init/: entrypoint.sh  (+3 more)
docker/: entrypoint.sh  wasm_seq.json
e2e_tests/: .gitignore  README.md  configuredChains.yaml  dkim_test.go  go.mod  go.sum  zkemail_test.go
ibc_tests/: dungeon_test.go  go.mod  go.sum
indexer/: README.md  authz_decode_test.go  authz_handler.go  authz_querier.go  authz_querier_test.go  authz_test.go  config.go  config_test.go  errors.go  feegrant_handler.go  feegrant_querier.go  feegrant_querier_test.go  indexer_test.go  integration_test.go  multi_raw.go  multi_raw_integration_test.go  multi_raw_test.go  noop_service.go  noop_service_test.go  safe_handlers.go  safe_handlers_test.go  safe_init.go  safe_init_test.go  streaming.go
integration_tests/: abstract_account_test.go  account_migration_test.go  authz_test.go  configuredChains.yaml  dkim_test.go  dungeon_test.go  globalfee_bypass_test.go  go.mod  go.sum  ibc_transfer_test.go  jwt_aa_test.go  minimum_fee_test.go  mint_test.go  multiple_block_tx_test.go  reclaim_verifier_test.go  send_test.go  setup.go  simulate_test.go  token_factory_test.go  treasury_test.go  update_treasury_configs_test.go  update_treasury_params_test.go  upgrade_037_038_test.go  upgrade_038_039_test.go  upgrade_ibc_test.go  upgrade_ibc_xion_test.go  upgrade_test.go  upgrade_v10_minion_test.go  utils.go  utils_ibc.go  webauthn_test.go  zkemail_test.go
interchaintest/: go.sum  setup.go
make/: barretenberg.mk  build.mk  coverage.mk  lint.mk  proto.mk  test.mk
proto/: README.md  buf.gen.docs.yaml  buf.gen.gogo.yaml  buf.gen.js.yaml  buf.gen.kotlin.yaml  buf.gen.openapi.yaml  buf.gen.pulsar.yaml  buf.gen.swagger.yaml  buf.gen.swift.yaml  buf.yaml
prover/: main.go  main_test.go
scripts/: README.md  coverage-analyze.sh  proto-gen.sh  proto-setup.sh  protoc-common.sh  protoc-openapi-gen.sh  protoc-swagger-gen.sh  protocgen.sh  release-info.sh  setup_local_testnet_accounts.sh  test-coverage.sh  test_node.sh
typescript/: README.md  package.json
wasmbindings/: comprehensive_coverage_test.go  error_cases_test.go  final_coverage_test.go  grpc_plugin.go  grpc_plugin_test.go  missing_coverage_test.go  query_plugin.go  query_plugin_test.go  stargate_whitelist.go  stargate_whitelist_test.go  test_utils.go  test_utils_test.go  wasm.go  whitelist_all_test.go  whitelist_edge_cases_test.go
x/zk/barretenberg/wrapper/: .gitignore  CMakeLists.txt  Makefile.stub  barretenberg_stub.c  barretenberg_stub.cpp  barretenberg_wrapper.cpp  build-wrapper.sh  build.sh  stub.mk  test_verify.cpp
(+775 files in other folders)
